samples/_failures_safe/1761286194_91c10c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7f1af732.c: In function ‘main’:
./samples/SAFE/__tmp_7f1af732.c:144:19: error: expected ‘;’ at end of input
  144 |             printf
      |                   ^
      |                   ;
./samples/SAFE/__tmp_7f1af732.c:144:13: error: expected declaration or statement at end of input
  144 |             printf
      |             ^~~~~~
./samples/SAFE/__tmp_7f1af732.c:144:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7f1af732.c:144:13: error: expected declaration or statement at end of input
